# eeg-diagnosis

./: LICENSE  README.md  data_preperation.py  data_preprocessing.py  main.py  model_train.py  model_train_by_patient.py  model_train_patient_6fold.py  model_train_patient_leave1out.py  patient_validation.py  plots.py  pyproject.toml  requirements.txt  split_by_patient.py
common/: __init__.py  confusion_matrix.py  constants.py  functions.py  patient_validation.py  support_functions.py
common/functions/: data_processing.py  model.py  plots.py  voting.py
evaluation/: cross_validation.py  model.py
extra/: constants.py  cut_batches.py
split_by_patient/: split_45_9.py  split_6_fold.py
split_by_segment/: split_5_fold.py  split_80_20.py
split_by_segments/: split_5_fold.py  split_80_20.py
