[tool.poetry]
name = "eeg-diagnosis"
version = "0.1.0"
description = ""
authors = ["Ggkenios  <ggkenios@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.6.0"
matplotlib = "^3.4.3"
sklearn = "^0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
