[tool.poetry]
name = "eeg-diagnosis"
version = "0.1.0"
description = ""
authors = ["ggkenios  <ggkenios@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
tensorflow = "^2.7.0"
matplotlib = "^3.5.1"
sklearn = "^0.0"
seaborn = "^0.11.2"
mne = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
